<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Tintro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/intro"
        android:textSize="20sp"
        android:textColor="@color/text"/>

    <EditText
        android:id="@+id/eT1N1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/numero1"
        android:inputType="textPersonName"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        />

    <EditText
        android:id="@+id/eT2N2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/numero2"
        android:inputType="textPersonName"
        android:textColor="@color/text"
        android:textColorHint="@color/text"/>


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/resul"
        android:textSize="40dp"
        android:textColor="@color/text"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/B1S"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="Calc"
                android:text="@string/suma"
                android:textColor="@color/text"
                android:textColorLink="#FFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/B2R"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="Calc"
                android:text="@string/resta"
                android:textColor="@color/text"
                android:textColorLink="#FFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/B3M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="Calc"
                android:text="@string/multi"
                android:textColor="@color/text"
                android:textColorLink="#FFFF" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
             >

            <Button
                android:id="@+id/B4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="Calc"
                android:text="@string/divi"
                android:textColor="@color/text"
                android:textColorLink="#FFFF" />
        </TableRow>
    </TableLayout>


</LinearLayout>